# asi-core-hybrid

./: # Code Citations.md  .env.example  .gitignore  ASI_System_Dokumentation.md  BLOCKCHAIN_README.md  BUSINESS_CONTROL_CENTER.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECENTRALIZED_STORAGE.md  DEPLOYMENT_ALTERNATIVES.md  DEPLOYMENT_READY.md  DEVELOPER_ATTRACTION_PLAN.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_OVERVIEW.md  Dockerfile  EMPTY_FILES_ANALYSIS.md  ENHANCED_MODULES_COMPLETE.md  GITHUB_ABSICHERUNG_COMPLETE.md  GITHUB_PAGES_DEPLOYMENT.md  GITHUB_PAGES_SETUP_GUIDE.md  GITHUB_PRO_IMPLEMENTATION.md  GITHUB_PRO_IMPLEMENTATION_COMPLETE.md  GITHUB_PRO_INFO.md  HRM_IMPLEMENTATION_OVERVIEW.md  HYBRID_MODEL_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LINK_CHECK_REPORT.md  MEM_TOKEN_DEPLOYMENT.md  NOBELPREIS-ROADMAP.md  NewReflectionModal_complete.jsx  PERFECTION_ROADMAP.md  PRESENTATION_CHECKLIST.md  PWA_LAUNCH_ANNOUNCEMENT.md  QUICKSTART.md  README.md  README_NEW.md  TESTPROTOKOLL_HYBRID_MODELL.md  TRANSFORMATION_SUCCESS.md  (+19 more)
.devcontainer/: devcontainer.json.backup
.github/: DEPLOYMENT_TRIGGER.md  FUNDING.yml  copilot-instructions.md  copilot.yml  dependabot.yml  discussions.yml  labels.yml  project-config.yml  project-template.json  pull_request_template.md
asi_core/: __init__.py  agent_manager.py  blockchain.py  processing.py  search.py  state_management.py  storage.py
assets/: index-BA9YzQKf.css  index-Cvc1Nx1Z.js  index-DWAVIZhF.js  index-T_zM74c7.css
cmake/: asi-modules.cmake
config/: hybrid-model.json  secrets.example.json  (+1 more)
(+240 files in other folders)
